# ai-voice-chat-agent

./: .env.example  .gitIgnore  03-main-ollama-chat.py  06-main-rich-chat-stream.py  09-kokoro-sst-poc-stream.py  09-main-rich-chat-stream.py  10-chat-sst-stream.py  index.html  main-chat.py  main-ollama-chat-stream.py  main-ollama-chat.py  main-rich.py  main-terminal.py  main.py  pyproject.toml  readme.md  schemas.py  web-text-chat.py  web-voice-chat--ui-modern--192.168.111.200.html  web-voice-chat--ui-modern.html  web-voice-chat--ui-simple.html  web-voice-chat-full-2.html  web-voice-chat-full-2.py  web-voice-chat-full.html  web-voice-chat.html  web-voice-chat.py
01-examples/: 04-main-ollama-chat-stream.py  05-main-rich.py  08-kokoro-tts-poc.py
assets/: index.html
old/: web-voice-chat-full.py  web-voice-chat-partial.py
src/: config.py  util.py
src/_examples/: 07-main-TUI-poc.py
src/rag/: rag-chain.py  rag.py
src/stt/: __init__.py  _faster-whisper-1.py  _faster-whisper-2.py  _realtime-stt.py  _sherpa-onnx-sense-voice.py  _sherpa-onnx-zipformer.py  _whisper-model.py  mystt.py  stt.py  stttwo.py
src/tools/: __init__.py  gmail-auth.py  gmail-tools.py  rag.py  weather.py
src/tts/: __init__.py  mytts.py  tts.py  ttstwo.py
