[project]
name = "ai-voice-chat-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "langchain-ollama>=1.0.1",
    "langchain[anthropic]>=1.2.12",
    "numpy>=2.4.3",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "realtimestt>=0.1.7",
    "rich>=14.3.3",
    "setuptools>=82.0.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
