[project]
name = "ai-voice-chat-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "faster-whisper>=1.2.1",
    "kokoro>=0.9.4",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langchain[anthropic]>=1.2.12",
    "numpy>=2.4.3",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "setuptools>=82.0.1",
    "sherpa-onnx>=1.12.29",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "websockets>=16.0",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
